[gd_scene load_steps=8 format=2]

[ext_resource path="res://FrameWork/CollisionBox/WeaponBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://FrameWork/Gear/Weapon/Weapon_Jian.gd" type="Script" id=2]
[ext_resource path="res://resource/texture/weapon/sword-Sheet.png" type="Texture" id=3]
[ext_resource path="res://resource/animation/Weapon_Jian.tscn" type="PackedScene" id=4]
[ext_resource path="res://resource/weapon/sword.tres" type="Texture" id=5]
[ext_resource path="res://resource/weapon/jian_qiao.tres" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=6]

[node name="weapon_jian" type="Node2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="weaponBox" parent="." instance=ExtResource( 1 )]
monitorable = false

[node name="CollisionShape2D" parent="weaponBox" index="0"]
position = Vector2( 17, 1 )
shape = SubResource( 6 )

[node name="sword_left_hand" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
offset = Vector2( 0, -12 )
region_enabled = true
region_rect = Rect2( 0, 1, 3, 26 )

[node name="sword_sheath" type="Sprite" parent="."]
rotation = -1.91986
z_index = 1
z_as_relative = false
texture = ExtResource( 6 )
offset = Vector2( 0, -14 )
region_rect = Rect2( 4, 0, 2, 24 )

[node name="sword_right_hand" type="Sprite" parent="."]
position = Vector2( -6, 2.38419e-07 )
rotation = 2.0944
z_as_relative = false
texture = ExtResource( 5 )
offset = Vector2( 0, -12 )
region_rect = Rect2( 0, 1, 3, 26 )

[node name="AnimationPlayer" parent="." instance=ExtResource( 4 )]

[editable path="weaponBox"]
